--- a/requirements.txt
+++ b/requirements.txt
@@ -1,60 +1,51 @@
 absl-py==2.1.0
+aiohttp==3.9.5
 aioice==0.9.0
 aiortc==1.8.0
+aiosignal==1.3.1
+async-timeout==4.0.3
+asyncio==3.4.3
 attrs==23.2.0
 av==11.0.0
-bidict==0.23.1
-blinker==1.8.0
-boto3==1.34.93
-botocore==1.34.93
+blinker==1.8.1
+boto3==1.34.98
+botocore==1.34.98
 cffi==1.16.0
+cli-exit-tools==1.2.6
 click==8.1.7
 contourpy==1.2.1
-cryptography==42.0.5
+cryptography==42.0.6
 cycler==0.12.1
 dnspython==2.6.1
-filelock==3.13.4
+fake-winreg==1.6.3
 Flask==3.0.3
-Flask-SocketIO==5.3.6
 flatbuffers==24.3.25
 fonttools==4.51.0
-fsspec==2024.3.1
+frozenlist==1.4.1
 google-crc32c==1.5.0
-h11==0.14.0
+idna==3.7
 ifaddr==0.2.0
 itsdangerous==2.2.0
 jax==0.4.26
 jaxlib==0.4.26
-Jinja2==3.1.3
+Jinja2==3.1.4
 jmespath==1.0.1
 kiwisolver==1.4.5
+lib-detect-testenv==2.0.8
+lib-platform==1.2.10
+lib-registry==2.0.10
 MarkupSafe==2.1.5
 matplotlib==3.8.4
-mediapipe==0.10.11
+mediapipe==0.10.13
 ml-dtypes==0.4.0
-mpmath==1.3.0
-mysql-connector-python==8.3.0
-networkx==3.3
+multidict==6.0.5
 numpy==1.26.4
-nvidia-cublas-cu12==12.1.3.1
-nvidia-cuda-cupti-cu12==12.1.105
-nvidia-cuda-nvrtc-cu12==12.1.105
-nvidia-cuda-runtime-cu12==12.1.105
-nvidia-cudnn-cu12==8.9.2.26
-nvidia-cufft-cu12==11.0.2.54
-nvidia-curand-cu12==10.3.2.106
-nvidia-cusolver-cu12==11.4.5.107
-nvidia-cusparse-cu12==12.1.0.106
-nvidia-nccl-cu12==2.20.5
-nvidia-nvjitlink-cu12==12.4.127
-nvidia-nvtx-cu12==12.1.105
 opencv-contrib-python==4.9.0.80
 opencv-python==4.9.0.80
-opencv-python-headless==4.9.0.80
 opt-einsum==3.3.0
 packaging==24.0
 pillow==10.3.0
-protobuf==3.20.3
+protobuf==4.25.3
 pycparser==2.22
 pyee==11.1.0
 pylibsrtp==0.10.0
@@ -62,18 +53,13 @@ PyMySQL==1.1.0
 pyOpenSSL==24.1.0
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
-python-engineio==4.9.0
-python-socketio==5.11.2
-pywayland==0.4.17
 s3transfer==0.10.1
 scipy==1.13.0
-simple-websocket==1.0.0
+simplejson==3.19.2
 six==1.16.0
 sounddevice==0.4.6
-sympy==1.12
-torch==2.3.0
-triton==2.3.0
 typing_extensions==4.11.0
 urllib3==2.2.1
-Werkzeug==3.0.2
-wsproto==1.2.0
+Werkzeug==3.0.3
+wrapt==1.16.0
+yarl==1.9.4
